--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,10 +16,6 @@
     <style>
         @import url("https://fonts.googleapis.com/css?family=Montserrat");
 
-        .enable-transitions {
-            transition: background-color 0.3s, color 0.3s;
-        }
-
         .subscribeForm {
             background: whitesmoke;
             color: black;
@@ -101,48 +97,6 @@
                 display : inline;
             }
         }
-        /* bonfire.css a little thing GPT and I cooked up to make transitioning between dark and light mode more delightful. */
-        .bonfire {
-            position: relative;
-            width: 100px;
-            height: 100px;
-            margin: 100px auto;
-        }
-        
-        .flame {
-            position: absolute;
-            bottom: 40px;
-            width: 30px;
-            height: 60px;
-            background: white;
-            border-radius: 50px;
-            animation: flicker 0.2s infinite alternate;
-        }
-        
-        .flame:nth-child(2) {
-            left: 20px;
-            animation-delay: 0.1s;
-            background: cornflowerblue;
-        }
-        
-        .flame:nth-child(3) {
-            left: 40px;
-            background: white;
-        }
-        
-        .logs {
-            position: absolute;
-            bottom: 0;
-            width: 100px;
-            height: 40px;
-            background: white;
-            border-radius: 0 0 20px 20px;
-        }
-        
-        @keyframes flicker {
-            0% { transform: translateY(0px); }
-            100% { transform: translateY(-10px); }
-        }
     </style>
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -174,7 +128,7 @@
     </script>
 </head>
 <body>
-  <article class="post">
+  <article class="lilPadding">
     <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
         <p class="post-meta">
