--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,13 @@
             color: whitesmoke;
         }
 
+        .blogpostContainer {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+        
         .lilPadding {
             padding: .5em
         }
@@ -127,7 +134,7 @@
     </script>
 </head>
 <body>
-  <article class="lilPadding">
+  <article class="lilPadding blogpostContainer">
     <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
         <p class="post-meta">
