--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -134,10 +134,10 @@
     </script>
 </head>
 <body>
-  <article class="lilPadding blogpostContainer">
+  <article class="lilPadding">
     <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
-        <p class="post-meta">
+        <p class="post-meta blogpostContainer">
             Posted on {{ page.date | date: "%b %-d, %Y" }}
             {% if page.author %}
             by {{ page.author }}
