--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -137,15 +137,16 @@
   <article class="lilPadding">
     <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
-        <p class="post-meta blogpostContainer">
+        <p class="post-meta">
             Posted on {{ page.date | date: "%b %-d, %Y" }}
             {% if page.author %}
             by {{ page.author }}
             {% endif %}
         </p>
     </header>
-
-    <div class="post-content">
-        {{ content }}
+    <div class="blogpostContainer">    
+            <div class="post-content">
+                {{ content }}
+            </div>
     </div>
 </body>
