--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,11 +35,17 @@
         }
 
         .blogpostContainer {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
+          display: grid;
+          grid-template-columns:
+            1fr
+            min(65ch, 100%)
+            1fr;
         }
+
+         
+        .blogpostContainer > * {
+          grid-column: 2;
+        }   
         
         .lilPadding {
             padding: .5em
@@ -134,7 +140,7 @@
     </script>
 </head>
 <body>
-  <article class="lilPadding">
+  <article class="lilPadding blogpostContainer">
     <header class="post-header">
         <h1 class="post-title">{{ page.title }}</h1>
         <p class="post-meta">
@@ -144,9 +150,7 @@
             {% endif %}
         </p>
     </header>
-    <div class="blogpostContainer">    
-            <div class="post-content">
-                {{ content }}
-            </div>
+    <div class="post-content">
+        {{ content }}
     </div>
 </body>
