--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -150,7 +150,7 @@
             {% endif %}
         </p>
     </header>
-    <hr />
+    <hr style="width: 100%" />
     <div class="post-content">
         {{ content }}
     </div>
