clean up styles

--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -77,21 +77,12 @@ Have fun :)
       }
     }
 
-    .enable-transitions {
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    .subscribeForm {
-      background: whitesmoke;
-      color: black;
-    }
-
     .lightMode {
       background: cornflowerblue;
     }
 
     .darkMode {
-      background: #233e6f;
+      background: black
     }
 
     * {
@@ -127,30 +118,11 @@ Have fun :)
       width: auto;        /* Maintain aspect ratio, remove if you want max-width to take precedence */
     }
 
-    .creationsContainer {
-      justify-content: space-around;
-      display: flex;
-    }
       
     body {
       max-width: 80em;
       margin: auto;
       transition: all 2s;
-    }
-
-    a {
-      color: whitesmoke;
-      font-style: italic;
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: lightblue;
-    }
-
-    button {
-      background: whitesmoke;
-      color: black;
     }
   </style>
   
