--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,8 @@
     </title>
     <style>
         @import url("https://fonts.googleapis.com/css?family=Montserrat");
-
+        @import url('https://fonts.googleapis.com/css2?family=Jacquard+12&family=Poetsen+One&display=swap');
+        
         .subscribeForm {
             background: whitesmoke;
             color: black;
@@ -33,6 +34,11 @@
             font-family: 'Montserrat', sans-serif;
             color: whitesmoke;
         }
+
+        h1, h2, h3, h4, h5, h6{
+           font-family: 'Jacquard 12', sans-serif;
+        }
+                
 
         .blogpostContainer {
           display: grid;
