--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,11 @@
             color: whitesmoke;
         }
 
-        h1, h2, h3, h4, h5, h6{
+        h1, h2, h3, h4, h5, h6 {
+           font-family: 'Jacquard 12', sans-serif;
+        }
+
+        .post-meta {
            font-family: 'Jacquard 12', sans-serif;
         }
                 
