--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@
     <style>
         @import url("https://fonts.googleapis.com/css?family=Montserrat");
         @import url('https://fonts.googleapis.com/css2?family=Jacquard+12&family=Poetsen+One&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Jacquard+12&family=Poetsen+One&display=swap');
+
         
         .subscribeForm {
             background: whitesmoke;
@@ -36,11 +38,11 @@
         }
 
         h1, h2, h3, h4, h5, h6 {
-           font-family: 'Jacquard 12', sans-serif;
+           font-family: 'Poetsen One', sans-serif;
         }
 
         .post-meta {
-           font-family: 'Jacquard 12', sans-serif;
+           font-family: 'Poetsen One', sans-serif;
         }
                 
 
