--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -121,6 +121,13 @@
                 display : inline;
             }
         }
+            
+       img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
     </style>
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
