--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -134,7 +134,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <meta property="og:title" content="Chris's Small EcoFriendly Blog"/>
+    <meta property="og:title" content="{{ page.title }}"/>
     <meta property="og:description" content="Why are you sharing my blog? lol"/>
     <meta property="og:url" content="https://www.chrisbako.com/"/>
     <meta property="og:image" content="https://chrisbako.com/media/profile_photo.PNG"/>
