--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -137,7 +137,7 @@
     <meta property="og:title" content="{{ page.title }}"/>
     <meta property="og:description" content="Why are you sharing my blog? lol"/>
     <meta property="og:url" content="https://www.chrisbako.com/"/>
-    <meta property="og:image" content="https://chrisbako.com/media/profile_photo.PNG"/>
+    <meta property="og:image" content="{{ page.image }}"/>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
