--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -138,6 +138,10 @@
     <meta property="og:description" content="Why are you sharing my blog? lol"/>
     <meta property="og:url" content="https://www.chrisbako.com/"/>
     <meta property="og:image" content="{{ page.image }}"/>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:description" content="Why are you sharing my blog? lol">
+    <meta name="twitter:image" content="{{ page.image }}">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
